# test-esp-sound

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
