[package]
name = "test-esp-sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-hal = { path = "../esp-idf-hal" }
esp-idf-sys = { path = "../esp-idf-sys", features = [ "std", "native", "binstart" ] }

[profile.dev]
debug = true
opt-level = "z"

[build-dependencies]
embuild = { path = "../embuild", features = ["elf"] }
anyhow = "1"
